old website reupped

--- a/index.html
+++ b/index.html
@@ -1,3 +1,48 @@
-betefex.se is being updated and will return shortly.
+<!doctype html>
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
 
-In the meantime, contact mbe@betefex.se for any inquiries.
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/3.0.8/marked.min.js"></script>
+        <script src="index.js"></script>
+
+        <title>BeTefex AB: Perfect Matching technology</title>
+    </head>
+    <body>
+        <header>
+            <table>
+                <!--<tr>
+                    <th colspan="2">BeTefex Perfect Matching</th>
+                </tr>
+                <tr><th><div style="height: 10px;"></div></th></tr>-->
+                <tr>
+                    <td id="eco.md" class="menub highlighted">Energy markets and<br/>ecological trading</th>
+                    <td id="commodity.md" class="menub">Commodity markets:<br/>futures and combinations</th>
+                    <td id="about.md" class="menub">Licensing, about us,<br/>and contact details</th>
+                </tr>
+            </table>
+        </header>
+        <div class="contents">
+            <div class="contents-border">
+                <div id="content"></div>
+            </div>
+            <div style="clear:both; min-height: 100px; width: 1000px;"></div>
+        </div>
+        <footer>
+            <div class="footer-logo-text">
+                <a href="https://betefex.se">
+                    <img src="betefex.svg"/>
+                    <!--<span style="color: #EACF4C">Be</span><span style="color: white">Tefex</span>-->
+                </a>
+            </div>
+            <div style="align-self: flex-end; white-space: nowrap;">
+                <div class="footer-info-text">For all inquiries email: <a href="mailto:mbe@betefex.se">mbe@betefex.se</a></div>
+                <div class="footer-info-text">BeTefex AB, org.nr. 559215-8975, Ume&aring; kommun</div>
+                <div class="footer-info-text">All material (unless indicated) &copy; BeTefex AB, 2021</div>
+            </div>
+        </footer>
+    </body>
+</html>
